Update all docs — Mill integration, errors-as-values, correct syntax
- TODO.md: Phase 4 reflects full Mill pipeline, test count → 100,
  errors-as-values model, removed fn keyword references
- getting-started.md: single installer, remove fn keyword, data class
  parenthesized syntax, errors-as-values only (no try/catch)
- design-zinc-java-transpilation.md: status IMPLEMENTED, errors-as-values
  mappings, camelCase methods, Phase 4 actual implementation
- language-reference.md: full CLI commands including init/native/docker/update
- guide-mill-build.md: Docker section with native distroless + JVM fallback

Co-Authored-By: Claude Opus 4.6 (1M context) <noreply@anthropic.com>